[package]
name = "img_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
wasm-bindgen = "0.2"

[lib]
name = "img_editor"
crate-type = ["cdylib", "rlib"]

[build]
target = "wasm32-unknown-unknown"
